Ensure background image covers entire page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,7 +18,7 @@ body {
   background-image: url('https://images.unsplash.com/photo-1526894198609-10b3cdf45c52?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&w=3349');
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: fit-content;
   color: var(--white);
 }
 
